<resources>
    <string name="app_name">DreamCraft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="site_address">Site Address</string>
    <string name="message">Message</string>
    <string name="contact_me">Contact Me</string>

    <string name="empty_">%s can\'t be empty</string>
    <string name="mobile_number_length">Mobile number should be of 10 digits</string>
    <string name="name_length">Please enter full name</string>
    <string name="enter_valid_number">Please enter valid mobile number!</string>
    <string name="enter_valid_name">Please enter valid Full Name!</string>
    <string name="hide_keyboard">hide keyboard</string>
    <string name="enter_valid_email">Please enter valid email!</string>
    <string name="whatsappMessage">Dear DreamCraft,\nI am %s, interested in your interior design services. Please find my contact details below:\nName: %s\nEmail: %s\nMobile Number: %s</string>
    <string name="surf_my_previous_work">Dream Craft,</string>
    <string name="work_2d">2D Work</string>
    <string name="work_3d">3D Work</string>
    <string name="categories_apartment">Apartment</string>
    <string name="categories_office">Office</string>
    <string name="categories_commercial">Commercial</string>
    <string name="categories_house">House</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="dream_craft">Dream Craft</string>
    <string name="previous_sites">Previous Work</string>
    <string name="craft_my_site">Craft My Site</string>
    <string name="contact_us">Contact Us</string>
</resources>